--- a/WickedWebApi/WickedWebApi.BL/WickedWebApi.BL.csproj
+++ b/WickedWebApi/WickedWebApi.BL/WickedWebApi.BL.csproj
@@ -4,21 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-<<<<<<< HEAD
     <ProjectGuid>{3C4D4C8C-26BF-4867-B77E-71CC608A6809}</ProjectGuid>
-=======
-    <ProjectGuid>{68622FF4-EFD8-45CB-97AD-4FD71C154635}</ProjectGuid>
->>>>>>> Dev-Stefan
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WickedWebApi.BL</RootNamespace>
     <AssemblyName>WickedWebApi.BL</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-<<<<<<< HEAD
-=======
     <TargetFrameworkProfile />
->>>>>>> Dev-Stefan
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,10 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-<<<<<<< HEAD
-=======
     <Prefer32Bit>false</Prefer32Bit>
->>>>>>> Dev-Stefan
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,13 +30,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-<<<<<<< HEAD
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-=======
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ClosedXML, Version=0.91.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
@@ -80,49 +63,33 @@
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
->>>>>>> Dev-Stefan
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-<<<<<<< HEAD
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager\AccountManager.cs" />
     <Compile Include="AccountManager\IAccountManager.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="ExcelReader.cs" />
+    <Compile Include="Orar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WickedWebApi.DAL\WickedWebApi.DAL.csproj">
       <Project>{f8f7a98c-3c5c-4755-8142-b864a8e5d541}</Project>
       <Name>WickedWebApi.DAL</Name>
     </ProjectReference>
-=======
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ExcelReader.cs" />
-    <Compile Include="Models\Cont.cs" />
-    <Compile Include="Models\Curs.cs" />
-    <Compile Include="Models\Enums.cs" />
-    <Compile Include="Models\Grupa.cs" />
-    <Compile Include="Models\Materie.cs" />
-    <Compile Include="Models\Misc\Corp.cs" />
-    <Compile Include="Models\Misc\LimbaStraina.cs" />
-    <Compile Include="Models\Profesor.cs" />
-    <Compile Include="Models\ProfesorProgramare.cs" />
-    <Compile Include="Models\Programare.cs" />
-    <Compile Include="Orar.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Student.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
->>>>>>> Dev-Stefan
+    <ProjectReference Include="..\WickedWebApi.TL\WickedWebApi.TL.csproj">
+      <Project>{dc8f57cf-4469-4437-b82b-8ff14eac1187}</Project>
+      <Name>WickedWebApi.TL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
