--- a/WickedWebApi/WickedWebApi/Web.config
+++ b/WickedWebApi/WickedWebApi/Web.config
@@ -14,9 +14,7 @@
     <add name="WickedSQL" connectionString="database=WickedApp;server=DESKTOP-FA62B5E\SQLEXPRESS01;Connect Timeout=30;Trusted_Connection=Yes;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>  
     -->
 
-    <add name="WickedSQL"
-         providerName="System.Data.SqlClient"
-         connectionString="Data Source=DESKTOP-FA62B5E\SQLEXPRESS01;Initial Catalog=WickedApp;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="WickedSQL" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-FA62B5E\SQLEXPRESS01;Initial Catalog=WickedApp;Integrated Security=True;MultipleActiveResultSets=True" />
     
   </connectionStrings>
   <appSettings>
@@ -62,6 +60,14 @@
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
@@ -71,15 +77,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
