--- a/WickedWebApi/WickedWebApi.DAL/WickedWebApi.DAL.csproj
+++ b/WickedWebApi/WickedWebApi.DAL/WickedWebApi.DAL.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAL\LoginContext.cs" />
+    <Compile Include="Account\AccountRepository.cs" />
+    <Compile Include="Account\IAccountRepository.cs" />
+    <Compile Include="DatabaseProvider.cs" />
+    <Compile Include="DatabaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
