--- a/WickedWebApi/WickedWebApi.BL/packages.config
+++ b/WickedWebApi/WickedWebApi.BL/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.91.0" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
+  <package id="EPPlus" version="4.1.1" targetFramework="net461" />
+  <package id="EPPlus.DataExtractor" version="1.3.2" targetFramework="net461" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
   <package id="FastMember.Signed" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
