Teo s-a jucat cu dll-urile

--- a/WickedWebApi/WickedWebApi.BL/WickedWebApi.BL.csproj
+++ b/WickedWebApi/WickedWebApi.BL/WickedWebApi.BL.csproj
@@ -74,8 +74,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountManager\AccountManager.cs" />
-    <Compile Include="AccountManager\IAccountManager.cs" />
+    <Compile Include="UserManager\UserManager.cs" />
+    <Compile Include="UserManager\IUserManager.cs" />
     <Compile Include="AppointmentExcelRead.cs" />
     <Compile Include="ExcelReader.cs" />
     <Compile Include="Logger\Logger.cs" />
