Added Schedule manager

--- a/WickedWebApi/WickedWebApi.BL/WickedWebApi.BL.csproj
+++ b/WickedWebApi/WickedWebApi.BL/WickedWebApi.BL.csproj
@@ -74,6 +74,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScheduleManager\IScheduleManager.cs" />
+    <Compile Include="ScheduleManager\ScheduleManager.cs" />
     <Compile Include="UserManager\UserManager.cs" />
     <Compile Include="UserManager\IUserManager.cs" />
     <Compile Include="AppointmentExcelRead.cs" />
