--- a/WickedWebApi/WickedWebApi/Web.config
+++ b/WickedWebApi/WickedWebApi/Web.config
@@ -14,7 +14,7 @@
     <add name="WickedSQL" connectionString="database=WickedApp;server=DESKTOP-FA62B5E\SQLEXPRESS01;Connect Timeout=30;Trusted_Connection=Yes;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>  
     -->
 
-    <add name="WickedSQL" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-FA62B5E\SQLEXPRESS01;Initial Catalog=WickedDb;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="WickedSQL" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-46Q4OQ5\SQLEXPRESS01;Initial Catalog=WickedDb;Integrated Security=True;MultipleActiveResultSets=True" />
     
   </connectionStrings>
   <appSettings>
