--- a/WickedWebApi/WickedWebApi.BL/packages.config
+++ b/WickedWebApi/WickedWebApi.BL/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
 </packages>
