--- a/WickedWebApi/WickedWebApi.DAL/WickedWebApi.DAL.csproj
+++ b/WickedWebApi/WickedWebApi.DAL/WickedWebApi.DAL.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Feedbacks\FeedbackRepository.cs" />
     <Compile Include="Feedbacks\IFeedbackRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student\IStudentRepository.cs" />
+    <Compile Include="Student\StudentRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
