Hosted WebApp on Azure

--- a/WickedWebApi/WickedWebApi/Web.config
+++ b/WickedWebApi/WickedWebApi/Web.config
@@ -14,8 +14,11 @@
     <add name="WickedSQL" connectionString="database=WickedApp;server=DESKTOP-FA62B5E\SQLEXPRESS01;Connect Timeout=30;Trusted_Connection=Yes;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>  
     -->
 
+<!--
     <add name="WickedSQL" providerName="System.Data.SqlClient" connectionString="Data Source=FERRET\SQLEXPRESS;Initial Catalog=WickedDb;Integrated Security=True;MultipleActiveResultSets=True" />
-    
+-->
+    <add name="WickedSQL" providerName="System.Data.SqlClient" connectionString="Server=tcp:wickedwebapidbserver.database.windows.net,1433;Initial Catalog=WickedWebApi_db;Persist Security Info=False;User ID=TPS;Password=TeoPetruSiStefan3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
